--- a/DiscordBot/package.json
+++ b/DiscordBot/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "discord.js": "^11.4.2",
     "dotenv": "^6.1.0",
+    "form-data": "^2.3.3",
     "mysql": "^2.16.0",
+    "node-fetch": "^2.3.0",
+    "node-poeditor": "^1.0.7",
+    "request": "^2.88.0",
     "utf8": "^3.0.0"
   }
 }
