--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -3,112 +3,73 @@
   "author": "Timeraa & Fruxh",
   "description": "__MSG_description__",
   "default_locale": "en",
-  "version": "1.2.52",
+  "version": "1.3",
   "manifest_version": 2,
   "web_accessible_resources": ["icon.png", "languages/*.json"],
-  "icons": {
-    "2024": "icon.png"
-  },
-  "background": {
-    "scripts": ["js/util/socket.io-2.1.1.min.js", "js/background.js"],
-    "presistent": false
-  },
   "browser_action": {
     "default_popup": "html/popup.html",
     "default_icon": {
       "2024": "icon.png"
     }
   },
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+  "icons": {
+    "2024": "icon.png"
+  },
+  "background": {
+    "scripts": ["js/util/socket.io-2.1.1.min.js", "js/background.js"]
+  },
   "content_scripts": [
-    {
-      "js": [
-        "js/util/jquery-3.3.1.min.js",
-        "js/util/socket.io-2.1.1.min.js",
-        "js/util/socketConnector.js",
-        "js/util/custom-i18n.js"
-      ],
-      "css": ["css/connect.css"],
-      "matches": ["<all_urls>"]
-    },
-    {
-      "js": ["js/presences/Anime/Anime4You.js"],
-      "matches": ["*://www.anime4you.one/*"]
-    },
     {
       "matches": ["<all_urls>"],
       "js": [
         "js/util/jquery-3.3.1.min.js",
-        "js/iframeWitch/Anime4You_Witch.js"
+        "js/util/socketConnector.js",
+        "js/util/langManager.js"
       ],
+      "css": ["css/connect.css"]
+    },
+    {
+      "matches": ["<all_urls>"],
+      "js": ["js/util/jquery-3.3.1.min.js", "js/presences/iframeWitch.js"],
       "all_frames": true
     },
     {
-      "js": ["js/presences/Music/YouTubeMusic.js"],
-      "matches": ["*://music.youtube.com/*"]
+      "matches": ["*://www.youtube.com/*"],
+      "js": ["js/presences/Video/YouTube.js"]
     },
     {
-      "js": ["js/presences/Video/YouTube.js"],
-      "matches": ["*://www.youtube.com/*"]
+      "matches": ["*://music.youtube.com/*"],
+      "js": ["js/presences/Music/YouTube_Music.js"]
     },
     {
-      "js": ["js/presences/Video/Netflix.js"],
-      "matches": ["*://*.netflix.com/*"]
+      "matches": ["*://soundcloud.com/*"],
+      "js": ["js/presences/Music/SoundCloud.js"]
     },
     {
-      "js": ["js/presences/Music/SoundCloud.js"],
-      "matches": ["*://*.soundcloud.com/*"]
+      "matches": ["*://www.netflix.com/*"],
+      "js": ["js/presences/Video/Netflix.js"]
     },
     {
-      "js": ["js/presences/Video/Twitch.js"],
-      "matches": ["*://*.twitch.tv/*"]
+      "matches": ["*://www.aniflix.tv/*"],
+      "js": ["js/presences/Anime/Aniflix.js"]
     },
     {
-      "js": ["js/presences/Anime/KissAnime.js"],
-      "matches": ["*://kissanime.ru/*"]
+      "matches": ["*://www.anime4you.one/*"],
+      "js": ["js/presences/Anime/Anime4You.js"]
     },
     {
-      "js": ["js/presences/Anime/JKAnime.js"],
-      "matches": ["*://jkanime.net/*"]
+      "matches": ["*://www.twitch.tv/*"],
+      "js": ["js/presences/Video/Twitch.js"]
     },
     {
-      "js": ["js/presences/Reading/FimFiction.js"],
-      "matches": ["*://www.fimfiction.net/*"]
+      "matches": ["*://www.rabb.it/*"],
+      "js": ["js/presences/Video/Rabb.it.js"]
     },
     {
-      "js": ["js/presences/Anime/HentaiHaven.js"],
-      "matches": ["*://hentaihaven.org/*"]
-    },
-    {
-      "js": ["js/presences/Video/Rabbit.js"],
-      "matches": ["*://www.rabb.it/*"]
-    },
-
-    {
-      "js": ["js/presences/Anime/MasterAnime.js"],
-      "matches": ["*://www.masterani.me/*"]
-    },
-    {
-      "js": ["js/presences/Anime/SuperAnimes.js"],
-      "matches": ["*://www.superanimes.site/*"]
-    },
-    {
-      "js": ["js/presences/Music/Pandora.js"],
-      "matches": ["*://www.pandora.com/*"]
-    },
-    {
-      "js": ["js/presences/Anime/HentaiGasm.js"],
-      "matches": ["*://hentaigasm.com/*"]
-    },
-    {
-      "js": ["js/presences/Anime/Pokyun.js"],
-      "matches": ["*://www.pokyun.tv/*"]
+      "matches": ["*://www.crunchyroll.com/*"],
+      "js": ["js/presences/Anime/Crunchyroll.js"]
     }
   ],
-  "permissions": [
-    "http://localhost:3020/",
-    "tabs",
-    "storage",
-    "declarativeContent"
-  ]
+  "permissions": ["http://localhost:3020/", "tabs", "storage"],
+  "content_security_policy": "script-src 'self' https://*.premid.app/*; object-src 'self'"
 }
