--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "electron-packager": "^12.2.0",
     "electron-winstaller": "^2.7.0",
     "electron-installer-debian": "^1.0.0"
+  },
+  "dependencies": {
+    "dotenv": "^6.2.0",
+    "node-fetch": "^2.3.0"
   }
 }
