--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -24,7 +24,8 @@
       "js": [
         "js/util/jquery-3.3.1.min.js",
         "js/util/socketConnector.js",
-        "js/util/langManager.js"
+        "js/util/langManager.js",
+        "js/util/presenceHandler.js"
       ],
       "css": ["css/connect.css"]
     },
