--- a/DiscordBot/package.json
+++ b/DiscordBot/package.json
@@ -1,11 +1,11 @@
 {
   "name": "premid",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index",
-    "start": "ndoe index"
+    "start": "node index"
   },
   "author": "Timeraa",
   "license": "ISC",
