--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
+    "sqlstring": "^2.3.1",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
