--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -3,7 +3,7 @@
   "author": "Timeraa & Fruxh",
   "description": "__MSG_description__",
   "default_locale": "en",
-  "version": "1.3.1.3",
+  "version": "2.0",
   "manifest_version": 2,
   "web_accessible_resources": ["icon.png", "languages/*.json"],
   "browser_action": {
@@ -71,7 +71,15 @@
       "js": ["js/presences/Anime/Crunchyroll.js"]
     }
   ],
-  "permissions": ["http://localhost:3020/", "tabs", "storage"],
+  "permissions": [
+    "https://*/*",
+    "http://*/*",
+    "http://localhost:3020/",
+    "tabs",
+    "storage",
+    "webRequest",
+    "<all_urls>"
+  ],
   "content_security_policy": "script-src 'self' https://*.premid.app/*; object-src 'self'",
   "applications": {
     "gecko": {
