--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "electron-installer-debian": "^1.0.0"
   },
   "dependencies": {
+    "datauri": "^1.1.0",
     "dotenv": "^6.2.0",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "request-promise-native": "^1.0.5"
   }
 }
