add mixer support

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -61,6 +61,10 @@
       "matches": ["*://www.twitch.tv/*"],
       "js": ["js/presences/Video/Twitch.js"]
     },
+	{
+	  "matches": ["*://www.mixer.com/*"],
+	  "js": ["js/presences/Video/Mixer.js"]
+	},
     {
       "matches": ["*://www.rabb.it/*"],
       "js": ["js/presences/Video/Rabb.it.js"]
@@ -68,12 +72,14 @@
     {
       "matches": ["*://www.crunchyroll.com/*"],
       "js": ["js/presences/Anime/Crunchyroll.js"]
-    },
-    {
-      "matches": ["*://www.branitube.org/*"],
-      "js": ["js/presences/Anime/Branitube.js"]
     }
   ],
   "permissions": ["http://localhost:3020/", "tabs", "storage"],
-  "content_security_policy": "script-src 'self' https://*.premid.app/*; object-src 'self'"
+  "content_security_policy": "script-src 'self' https://*.premid.app/*; object-src 'self'",
+  "applications": {
+    "gecko": {
+      "id": "support@premid.app",
+      "strict_min_version": "52.0"
+    }
+  }
 }
