--- a/src/package.json
+++ b/src/package.json
@@ -1,28 +1,36 @@
 {
-  "productName": "PreMiD",
-  "productVersion": "1.2",
+  "productVersion": "2.0",
   "name": "premid",
-  "description": "Discord Rich Presence, Media Controls... for websites.",
-  "version": "1.2.0",
+  "description": "Discord Rich Presence for websites.",
+  "version": "2.0.0",
   "main": "index.js",
   "author": "Timeraa",
   "license": "MIT",
+  "homepage": "https://premid.app/",
+  "bugs": {
+    "url": "https://github.com/PreMiD/PreMiD/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PreMiD/PreMiD.git"
+  },
   "scripts": {
-    "start": "electron .",
-    "dev": "nodemon electron ."
+    "start": "electron ."
   },
   "dependencies": {
     "auto-launch": "^5.0.5",
-    "chalk": "^2.4.1",
+    "datauri": "^1.1.0",
     "discord-rpc": "^3.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^2.0.0",
     "express": "^4.16.4",
     "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "electron-prebuilt-compile": "3.0.2",
+    "chalk": "^2.4.2",
+    "electron": "^4.0.1",
     "nodemon": "^1.18.9"
   }
 }
