Firefox is weird okay...

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -71,7 +71,8 @@
 	"applications": {
 		"gecko": {
 			"id": "support@premid.app",
-			"strict_min_version": "52.0"
+			"strict_min_version": "52.0",
+			"update_url": "https://api.premid.app/firefox/updates"
 		}
 	}
 }
