--- a/src/package.json
+++ b/src/package.json
@@ -1,37 +1,37 @@
 {
-	"productVersion": "2.0",
-	"productName": "PreMiD",
-	"name": "premid",
-	"description": "Discord Rich Presence for websites.",
-	"version": "2.0.0",
-	"main": "index.js",
-	"author": "Timeraa",
-	"license": "MIT",
-	"homepage": "https://premid.app/",
-	"bugs": {
-		"url": "https://github.com/PreMiD/PreMiD/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/PreMiD/PreMiD.git"
-	},
-	"scripts": {
-		"start": "electron ."
-	},
-	"dependencies": {
-		"auto-launch": "^5.0.5",
-		"del": "^4.1.0",
-		"discord-rpc": "^3.0.1",
-		"electron-squirrel-startup": "^1.0.0",
-		"electron-store": "^2.0.0",
-		"express": "^4.16.4",
-		"request": "^2.88.0",
-		"request-promise-native": "^1.0.7",
-		"socket.io": "^2.2.0"
-	},
-	"devDependencies": {
-		"chalk": "^2.4.2",
-		"dotenv": "^6.2.0",
-		"electron": "^4.1.3"
-	}
+  "productVersion": "2.0",
+  "productName": "PreMiD",
+  "name": "premid",
+  "description": "Discord Rich Presence for websites.",
+  "version": "2.0.0",
+  "main": "index.js",
+  "author": "Timeraa",
+  "license": "MIT",
+  "homepage": "https://premid.app/",
+  "bugs": {
+    "url": "https://github.com/PreMiD/PreMiD/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PreMiD/PreMiD.git"
+  },
+  "scripts": {
+    "start": "electron ."
+  },
+  "dependencies": {
+    "auto-launch": "5.0.5",
+    "del": "4.1.1",
+    "discord-rpc": "3.0.1",
+    "electron-squirrel-startup": "1.0.0",
+    "electron-store": "3.2.0",
+    "express": "4.16.4",
+    "request": "2.88.0",
+    "request-promise-native": "1.0.7",
+    "socket.io": "2.2.0"
+  },
+  "devDependencies": {
+    "chalk": "2.4.2",
+    "dotenv": "8.0.0",
+    "electron": "5.0.1"
+  }
 }
