--- a/src/package.json
+++ b/src/package.json
@@ -27,7 +27,8 @@
     "express": "4.16.4",
     "request": "2.88.0",
     "request-promise-native": "1.0.7",
-    "socket.io": "2.2.0"
+    "socket.io": "2.2.0",
+    "sudo-prompt": "^8.2.5"
   },
   "devDependencies": {
     "chalk": "2.4.2",
