--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,9 @@
   "automerge": true,
   "major": {
     "automerge": false
-  }
+  },
+  "packageRules": [{
+    "depTypeList": ["devDependencies"],
+    "automerge": true
+  }]
 }
