--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "license": "MIT",
   "devDependencies": {
     "chalk": "2.4.2",
-    "electron-installer-dmg": "1.0.0",
-    "electron-installer-windows": "1.1.1",
-    "electron-packager": "12.2.0",
-    "electron-winstaller": "2.7.0",
-    "electron-installer-debian": "1.2.0"
+    "electron-installer-dmg": "^1.0.0",
+    "electron-installer-windows": "^1.1.1",
+    "electron-packager": "^12.2.0",
+    "electron-winstaller": "^2.7.0",
+    "electron-installer-debian": "^1.2.0"
   },
   "dependencies": {
     "dotenv": "^6.2.0",
