--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-	"name": "premid",
-	"productName": "PreMiD",
-	"version": "2.0.0",
-	"repository": "https://github.com/Timeraa/PreMiD",
-	"scripts": {
-		"start": "npm start --prefix src/.",
-		"dev": "npm run dev --prefix src/.",
-		"pkgmac": "electron-packager ./src/ --out=./dist/ --asar --overwrite --icon=./installer_assets/appIcon.ico --osx-sign.identity='Florian Metz'",
-		"pkgwin": "electron-packager ./src/ --out=./dist/ --overwrite --icon=./installer_assets/appIcon.ico",
-		"pkgwin32": "electron-packager ./src/ --out=./dist/ --overwrite --icon=./installer_assets/appIcon.ico --platform=win32 --arch=ia32",
-		"pkglinux": "electron-packager ./src/ --out=./dist/ --overwrite --icon=./appIcon.ico --asar --platform=linux --arch=x64",
-		"installer_win": "node installer_assets/builder windows"
-	},
-	"license": "MIT",
-	"devDependencies": {
-		"chalk": "^2.4.2",
-		"electron-packager": "^14.0.1"
-	},
-	"dependencies": {
-		"datauri": "^1.1.0",
-		"dotenv": "^6.2.0",
-		"node-fetch": "^2.3.0",
-		"request": "^2.88.0",
-		"request-promise-native": "^1.0.7"
-	}
+  "name": "premid",
+  "productName": "PreMiD",
+  "version": "2.0.1",
+  "repository": "https://github.com/PreMiD/PreMiD",
+  "scripts": {
+    "init": "npm i && tsc pkg devMode installer_assets/builder",
+    "start": "electron dist/app/.",
+    "dev": "nodemon -L --quiet --exec \"node devMode.js & cd dist/app && electron index.js\" -w dist -e js",
+    "pkg": "node devMode && node pkg",
+    "pkgdist": "npm run pkg && node installer_assets/builder compile",
+    "pkgmac": "electron-packager ./src/ --out=./dist/ --asar --overwrite --icon=./installer_assets/appIcon.ico --osx-sign.identity='Florian Metz'",
+    "pkgwin": "electron-packager ./src/ --out=./dist/ --overwrite --icon=./installer_assets/appIcon.ico",
+    "pkgwin32": "electron-packager ./src/ --out=./dist/ --overwrite --icon=./installer_assets/appIcon.ico --platform=win32 --arch=ia32",
+    "pkglinux": "electron-packager ./src/ --out=./dist/ --overwrite --icon=./appIcon.ico --asar --platform=linux --arch=x64"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "@types/auto-launch": "^5.0.1",
+    "@types/discord-rpc": "^3.0.1",
+    "@types/electron-packager": "^13.0.1",
+    "@types/fs-extra": "^7.0.0",
+    "@types/ini": "^1.3.30",
+    "@types/request-promise-native": "^1.0.16",
+    "@types/socket.io": "^2.1.2",
+    "chalk": "^2.4.2",
+    "electron": "5.0.8",
+    "electron-packager": "^12.2.0",
+    "fast-glob": "^3.0.4",
+    "fs-extra": "^8.1.0",
+    "ini": "^1.3.5",
+    "nodemon": "^1.19.1",
+    "source-map-support": "^0.5.12"
+  },
+  "dependencies": {
+    "auto-launch": "5.0.5",
+    "discord-rpc": "3.0.2",
+    "electron-store": "3.3.0",
+    "socket.io": "2.2.0",
+    "sudo-prompt": "9.0.0"
+  }
 }
