--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "premid",
   "productName": "PreMiD",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "repository": "https://github.com/PreMiD/PreMiD",
   "scripts": {
     "init": "npm i && tsc pkg devMode installer_assets/builder",
@@ -18,26 +18,26 @@
   "devDependencies": {
     "@types/auto-launch": "^5.0.1",
     "@types/discord-rpc": "^3.0.1",
-    "@types/electron-packager": "^13.0.1",
-    "@types/fs-extra": "^7.0.0",
+    "@types/electron-packager": "^14.0.0",
+    "@types/fs-extra": "^8.0.0",
     "@types/ini": "^1.3.30",
     "@types/request-promise-native": "^1.0.16",
     "@types/socket.io": "^2.1.2",
     "chalk": "^2.4.2",
-    "electron": "5.0.8",
-    "electron-packager": "^12.2.0",
+    "electron": "^6.0.0",
+    "electron-packager": "^14.0.4",
     "fast-glob": "^3.0.4",
     "fs-extra": "^8.1.0",
     "ini": "^1.3.5",
     "nodemon": "^1.19.1",
-    "source-map-support": "^0.5.12",
+    "source-map-support": "^0.5.13",
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "auto-launch": "5.0.5",
-    "discord-rpc": "3.0.2",
-    "electron-store": "3.3.0",
-    "socket.io": "2.2.0",
-    "sudo-prompt": "9.0.0"
+    "auto-launch": "^5.0.5",
+    "discord-rpc": "^3.0.2",
+    "electron-store": "^4.0.0",
+    "socket.io": "^2.2.0",
+    "sudo-prompt": "^9.0.0"
   }
 }
