--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "pkgmac": "electron-packager ./src/ --out=./out/ --asar --overwrite --icon=./installer_assets/appIcon.ico --osx-sign.identity='Florian Metz'",
     "pkgwin": "electron-packager ./src/ --out=./out/ --overwrite --icon=./installer_assets/appIcon.ico",
     "pkgwin32": "electron-packager ./src/ --out=./out/ --overwrite --icon=./installer_assets/appIcon.ico --platform=win32 --arch=ia32",
-    "pkglinux": "electron-packager ./src/ --out=./out/ --overwrite --icon=./appIcon.ico --asar --platform=linux --arch=x64",
+    "pkglinux": "electron-packager ./src/ --out=./out/ --overwrite --icon=./appIcon.ico --asar --platform=linux --arch=x64 --executableName=premid",
     "installer-mac": "npm run pkgmac && node installer_assets/installer",
     "installer-win": "npm run pkgwin && node installer_assets/installer",
     "installer-win32": "npm run pkgwin32 && node installer_assets/installerWin32",
-    "installer-linux": "npm run pkglinux && electron-installer-debian --src out/PreMiD-linux-x64/ --dest dist/installer/ --arch amd64"
+    "installer-linux": "npm run pkglinux && electron-installer-debian --src out/PreMiD-linux-x64/ --dest dist/installer/ --arch amd64 --icon src/assets/images/logo.png"
   },
   "author": "Timeraa",
   "license": "MIT",
