♻️ Basically almost v2.0 ready

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,7 @@
     "baseUrl": ".",
     "outDir": "dist/app",
     "removeComments": true,
-    "esModuleInterop": true,
-    "paths": {
-      "*": ["node_modules/*"]
-    }
+    "esModuleInterop": true
   },
   "include": ["src/**/*"],
   "exclude": ["devMode.ts", "pkg.ts", "installer_assets/builder.ts"]
