--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "premid",
   "productName": "PreMiD",
-  "version": "2.0.2",
+  "version": "2.0.0",
   "repository": "https://github.com/PreMiD/PreMiD",
   "scripts": {
     "init": "npm i && tsc && tsc pkg devMode installer_assets/builder && node devMode.js compile",
     "start": "electron dist/app/.",
     "dev": "node devMode.js",
-    "pkg": "node devMode compile && node pkg",
+    "pkg": "rimraf dist installer_assets/updater.app && tsc && node devMode compile && cd dist/app/ && npm i && cd ../../ && node pkg",
     "pkgdist": "npm run pkg && node installer_assets/builder compile",
     "pkgmac": "electron-packager ./src/ --out=./dist/ --asar --overwrite --icon=./installer_assets/appIcon.ico --osx-sign.identity='Florian Metz'",
     "pkgwin": "electron-packager ./src/ --out=./dist/ --overwrite --icon=./installer_assets/appIcon.ico",
@@ -25,14 +25,15 @@
     "@types/request-promise-native": "^1.0.16",
     "@types/socket.io": "^2.1.2",
     "chalk": "^2.4.2",
-    "electron": "^6.0.5",
-    "electron-packager": "^14.0.4",
+    "electron": "^6.0.7",
+    "electron-packager": "^14.0.5",
     "fast-glob": "^3.0.4",
     "fs-extra": "^8.1.0",
     "ini": "^1.3.5",
     "nodemon": "^1.19.1",
+    "rimraf": "^3.0.0",
     "source-map-support": "^0.5.13",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.2"
   },
   "dependencies": {
     "auto-launch": "^5.0.5",
