--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
     "@types/request-promise-native": "^1.0.16",
     "@types/socket.io": "^2.1.2",
     "chalk": "^2.4.2",
-    "electron": "^6.0.7",
-    "electron-packager": "^14.0.5",
+    "electron": "^6.0.10",
+    "electron-packager": "^14.0.6",
     "fast-glob": "^3.0.4",
     "fs-extra": "^8.1.0",
     "ini": "^1.3.5",
-    "nodemon": "^1.19.1",
+    "nodemon": "^1.19.2",
     "rimraf": "^3.0.0",
     "source-map-support": "^0.5.13",
-    "typescript": "^3.6.2"
+    "typescript": "^3.6.3"
   },
   "dependencies": {
     "auto-launch": "^5.0.5",
-    "discord-rpc": "^3.0.2",
-    "electron-store": "^4.0.0",
-    "socket.io": "^2.2.0",
+    "discord-rpc": "github:discordjs/RPC",
+    "electron-store": "^5.0.0",
+    "socket.io": "^2.3.0",
     "sudo-prompt": "^9.0.0"
   }
 }
