--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/electron-packager": "^14.0.0",
     "@types/fs-extra": "^8.0.0",
     "@types/ini": "^1.3.30",
+    "@types/ora": "^3.2.0",
+    "@types/prompts": "^2.0.1",
     "@types/request-promise-native": "^1.0.16",
     "@types/socket.io": "^2.1.2",
     "chalk": "^2.4.2",
@@ -30,6 +32,8 @@
     "fs-extra": "^8.1.0",
     "ini": "^1.3.5",
     "nodemon": "^1.19.2",
+    "ora": "^4.0.1",
+    "prompts": "^2.2.1",
     "rimraf": "^3.0.0",
     "source-map-support": "^0.5.13",
     "typescript": "^3.6.3"
