--- a/package.json
+++ b/package.json
@@ -2,16 +2,13 @@
   "name": "premid",
   "productName": "PreMiD",
   "description": "Discord Rich Presence for websites.",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "repository": "https://github.com/PreMiD/PreMiD",
   "scripts": {
     "init": "npm i && tsc && tsc pkg devMode && node devMode.js compile",
     "start": "electron dist/app/.",
     "dev": "node devMode.js",
-    "pkg": "rimraf dist installer_assets/updater.app && tsc && node devMode compile && cd dist/app/ && npm i && cd ../../ && node pkg",
-    "pkgdist": "npm run pkg && node compile",
-    "pkgwin32": "electron-packager ./src/ --out=./dist/ --overwrite --icon=./installer_assets/appIcon.ico --platform=win32 --arch=ia32",
-    "pkglinux": "electron-packager ./src/ --out=./dist/ --overwrite --icon=./appIcon.ico --asar --platform=linux --arch=x64"
+    "pkg": "rimraf dist && tsc && node devMode compile && cd dist/app/ && npm i --prefer-offline && cd ../../ && node pkg"
   },
   "license": "MIT",
   "devDependencies": {
@@ -23,16 +20,16 @@
     "@types/ini": "^1.3.30",
     "@types/ora": "^3.2.0",
     "@types/prompts": "^2.0.1",
-    "@types/request-promise-native": "^1.0.16",
-    "@types/socket.io": "^2.1.2",
+    "@types/request-promise-native": "^1.0.17",
+    "@types/socket.io": "^2.1.3",
     "chalk": "^2.4.2",
     "electron": "^6.0.10",
     "electron-packager": "^14.0.6",
     "fast-glob": "^3.0.4",
     "fs-extra": "^8.1.0",
     "ini": "^1.3.5",
-    "nodemon": "^1.19.2",
-    "ora": "^4.0.1",
+    "nodemon": "^1.19.3",
+    "ora": "^4.0.2",
     "prompts": "^2.2.1",
     "rimraf": "^3.0.0",
     "source-map-support": "^0.5.13",
