--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,18 @@
 name: DePloY
 on: push
+env: 
+  superSecretPassword: Hi there
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
       - name: Prepare build
-        run: npm run init
+        run: |
+          npm run init
+          npm run pkg
+        
