--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,12 @@ jobs:
         run: |
           npm run init
           npm run pkg
-      - uses: appleboy/scp-action@master
+      - uses: garygrossgarten/github-action-scp@release
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          port: 22
-          source: "dist/**/*"
-          target: "/home/PreMiD/builds/"
+          local: "dist/**/*"
+          remote: "/home/PreMiD/builds/"
+          concurrency: 10
         
