--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           npm run init
           npm run pkg
-      - uses: easingthemes/ssh-deploy@v2.0.7
+      - uses: AEnterprise/rsync-deploy@v1.0
         with:
           SERVER_IP: ${{ secrets.HOST }}
           SERVER_PORT: 22
