--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,10 @@
     "esModuleInterop": true
   },
   "include": ["src/**/*"],
-  "exclude": ["devMode.ts", "pkg.ts", "installer_assets/builder.ts"]
+  "exclude": [
+    "devMode.ts",
+    "pkg.ts",
+    "installer_assets/builder.ts",
+    ".github/deploy.ts"
+  ]
 }
