--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "version": "2.0.3",
   "repository": "https://github.com/PreMiD/PreMiD",
   "scripts": {
-    "init": "npm i && tsc && tsc pkg devMode && node devMode.js compile",
+    "init": "npm i && tsc && tsc pkg devMode .github/deploy && node devMode.js compile",
     "start": "electron dist/app/.",
     "dev": "node devMode.js",
     "pkg": "rimraf dist && tsc && node devMode compile && cd dist/app/ && npm i --prefer-offline && cd ../../ && node pkg"
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/archiver": "^3.0.0",
     "@types/auto-launch": "5.0.1",
     "@types/chalk": "2.2.0",
     "@types/discord-rpc": "3.0.1",
@@ -22,6 +23,8 @@
     "@types/prompts": "2.0.1",
     "@types/request-promise-native": "1.0.17",
     "@types/socket.io": "2.1.3",
+    "@types/ssh2-sftp-client": "^4.1.0",
+    "archiver": "^3.1.1",
     "chalk": "2.4.2",
     "electron": "6.0.11",
     "electron-packager": "14.0.6",
@@ -33,6 +36,7 @@
     "prompts": "2.2.1",
     "rimraf": "3.0.0",
     "source-map-support": "0.5.13",
+    "ssh2-sftp-client": "^4.2.0",
     "typescript": "3.6.3"
   },
   "dependencies": {
