--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,8 @@ jobs:
           password: ${{ secrets.SSHPASSWORD }}
           script: |
             cd /home/PreMiD/builds
-            unzip darwin.zip
-            rm -r darwin.zip
-            unzip win32.zip
-            rm -r win32.zip
+            unzip darwin.zip win32.zip
+            mv darwin/PreMiD-darwin-x64 PreMiD-darwin-x64
+            mv win32/PreMiD-win32-ia32 PreMiD-win32-ia32
+            mv win32/PreMiD-win32-x64 PreMiD-win32-x64
+            rm -r win32.zip darwin.zip win32 darwin
