--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,14 @@ on: push
 env:
   NODE_ENV: DePloY
 jobs:
+  test:
+    runs-on: "ubuntu-latest"
+    steps:
+      name: "Get"
+      run: |
+        wget https://installbuilder.bitrock.com/installbuilder-enterprise-19.9.0-linux-x64-installer.run
+        chmod u+x installbuilder-enterprise-19.9.0-linux-x64-installer.run
+        ./installbuilder-enterprise-19.9.0-linux-x64-installer.run
   package:
     runs-on: ${{ matrix.os }}
     strategy:
