--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,9 @@ jobs:
     steps:
       - name: Get and install
         run: |
-          printf '%s\n' y
+          wget https://installbuilder.bitrock.com/installbuilder-enterprise-19.9.0-linux-x64-installer.run
+          chmod u+x installbuilder-enterprise-19.9.0-linux-x64-installer.run
+          yes yes | ./installbuilder-enterprise-19.9.0-linux-x64-installer.run
   package:
     runs-on: ${{ matrix.os }}
     strategy:
