--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
         run: |
           wget https://installbuilder.bitrock.com/installbuilder-enterprise-19.9.0-linux-x64-installer.run
           chmod u+x installbuilder-enterprise-19.9.0-linux-x64-installer.run
-          printf '%s\n' y 13 | ./installbuilder-enterprise-19.9.0-linux-x64-installer.run
+          yes 'y' | ./installbuilder-enterprise-19.9.0-linux-x64-installer.run --installer-language en
   package:
     runs-on: ${{ matrix.os }}
     strategy:
