--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
           wget https://installbuilder.bitrock.com/installbuilder-enterprise-19.9.0-linux-x64-installer.run
           chmod u+x installbuilder-enterprise-19.9.0-linux-x64-installer.run
           yes 'y' | ./installbuilder-enterprise-19.9.0-linux-x64-installer.run --installer-language en
+          cd /opt/installbuilder-19.9.0
+          ls
   package:
     runs-on: ${{ matrix.os }}
     strategy:
