--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           mv y installbuilder
           cd installbuilder
           echo "${{ secrets.IBLICENSE }}" >> licence.xml
-          ls
+          echo $PWD
   package:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -31,4 +31,4 @@ jobs:
         run: |
           npm run pkg
           cd ..
-          ls
+          echo $PWD
